# Elasticsearch

./: README.md  elasticsearch.cabal
src/: ElasticSearch.hs  Main.hs
src/Search/: ElasticSearch.hs
test/Search/: ElasticSearchSpec.hs
