Name:                elasticsearch
Version:             0.1
License:             AllRightsReserved

Author:              Oliver Charles
Maintainer:          elasticsearch@ocharles.org.uk
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable test
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    text >= 0.11 && < 0.12,
    aeson >= 0.3.2.11,
    network >= 2.3.0.2,
    HTTP >= 4000.1.1

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

