Name:                elasticsearch
Version:             0.2
License:             AllRightsReserved

Author:              Oliver Charles
Maintainer:          elasticsearch@ocharles.org.uk
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Library
  hs-source-dirs: src

  exposed-modules:
    Search.ElasticSearch

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.11,
    text >= 0.11 && < 0.12,
    aeson >= 0.3.2.11,
    network >= 2.3.0.2,
    HTTP >= 4000.1.1,
    attoparsec >= 0.9.1.1,
    split

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
test-suite tests
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -threaded
  hs-source-dirs:  test/
  main-is:         Spec.hs
  -- default-language:    Haskell2010
  build-depends:   base,
                   elasticsearch,
                   hspec,
                   aeson,
                   transformers,
                   text,
                   async,
                   bytestring
